# future-aio

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md
.cargo/: config
.github/workflows/: ci.yml  publish_create.yml  publish_create_derive.yml  release.yml
async-test-derive/: Cargo.toml  README.md
async-test-derive/src/: lib.rs
certs/: .gitignore  Makefile  intermediate-cert.conf  intermediate-nginx.conf
certs/certs/: ca.crt  ca.key  ca.srl  client.crt  client.csr  client.key  client.pfx  server.crt  server.csr  server.key  server.pfx
fluvio-future-derive/: Cargo.toml
fluvio-future-derive/src/: lib.rs
fluvio-future-derive/ui-tests/: pass_ignore.rs
src/: collections.rs  doomsday.rs  file_slice.rs  future.rs  io.rs  lib.rs  metric.rs  native_tls.rs  retry.rs  rust_tls.rs  sync.rs  task.rs  test_util.rs  timer.rs  tls.rs  write.rs  zero_copy.rs
src/actor/: mod.rs
src/fs/: async_file.rs  bounded.rs  extension.rs  mmap.rs  mod.rs  shared_file.rs
src/future-aio/: Cargo.toml  Makefile
src/future-aio/async-test-derive/: Cargo.toml
src/future-aio/async-test-derive/src/: lib.rs
src/future-aio/src/: lib.rs  task.rs  test_util.rs  timer.rs  zero_copy.rs
src/future-aio/src/fs/: async_file.rs  bounded.rs  mmap.rs  mod.rs  shared_file.rs
src/future-aio/src/net/: mod.rs  tcp_stream.rs  tls.rs
src/future-aio/src/sync/: broadcast.rs  mod.rs
src/future-helper/: Cargo.toml  README.md
src/future-helper/async-test-derive/: Cargo.toml  README.md
src/future-helper/async-test-derive/src/: lib.rs
src/future-helper/src/: lib.rs
src/http_client/: async_std_compat.rs  client.rs  mod.rs  request.rs
src/io/: mod.rs
src/net/: mod.rs  tcp_stream.rs  tls.rs
src/openssl/: acceptor.rs  async_to_sync_wrapper.rs  certificate.rs  connector.rs  error.rs  handshake.rs  mod.rs  stream.rs  test.rs
src/rust_tls/: fake_verifier.rs
src/sync/: broadcast.rs
src/tls/: mod.rs  native_tls.rs
src/utils/: Cargo.toml  Makefile  README.md
src/utils/src/: lib.rs  logger.rs
test-data/http-client/: ip.json
tests/: http_client.rs  test_http_client.rs  test_native_pk12.rs  test_rustls.rs
