[package]
name = "fluvio-future-derive"
version = "0.1.0"
edition = "2021"
authors = ["Fluvio Contributors <team@fluvio.io>"]
description = "Procedure macro to run async fn as test"
repository = "https://github.com/infinyon/future-aio"
license = "Apache-2.0"
readme = "README.md"
resolver = "2"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0.2"
syn = { version = "1.0.14", features = ["full"] }


[dev-dependencies]
trybuild = { git = "https://github.com/infinyon/trybuild", branch = "check_option" }
fluvio-future = { path = "..", features = ["fixture"]}