[package]
name = "flv-future-aio"
version = "0.1.0"
edition = "2018"
authors = ["fluvio.io"]
description = "I/O futures for Fluvio project"
repository = "https://github.com/infinyon/flv-future"
license = "Apache-2.0"


[dependencies]
log = "0.4.8"
nix = "0.16.0"
bytes = "0.5.3"
memmap = "0.7.0"
async-trait = "0.1.21"
async-std = { version = "1.4.0", features = ["default","unstable"] }
futures_codec = "0.3.4"
futures = { version = "0.3.1"  }
flv-future-core = { path = "../future-helper", version = "0.1.0"}
pin-utils = "0.1.0-alpha.4"


[dev-dependencies]
flv-future-core = { path = "../future-helper", features=["fixture"]}
num_cpus = { version = "1.10.1" }
flv-util = { path= "../utils", version = "0.1.0", features= ["fixture"]}