[package]
name = "flv-future-aio"
version = "1.1.0"
edition = "2018"
authors = ["fluvio.io"]
description = "I/O futures for Fluvio project"
repository = "https://github.com/infinyon/flv-future"
license = "Apache-2.0"

[features]
default = ["asyncstd"]
asyncstd = ["async-std","futures-timer","futures_codec","tokio/sync"]
tokio2 = ["tokio"]
fixture = ["async-test-derive"]

[dependencies]
log = "0.4.8"
nix = "0.16.0"
bytes = "0.5.3"
memmap = "0.7.0"
async-trait = "0.1.21"
async-std = { version = "1.5.0", features = ["default","unstable"], optional = true }
futures-timer = { version = "2.0.2", optional = true }
tokio = { version = "0.2.12", optional = true }
futures_codec = { version = "0.3.4", optional = true }
futures = { version = "0.3.4"  }
pin-utils = "0.1.0-alpha.4"
async-test-derive = { path = "async-test-derive", version = "1.0.0", optional = true }
flv-util = { path= "../utils", version = "0.1.0" }


[dev-dependencies]
lazy_static = "1.2.0"
num_cpus = { version = "1.10.1" }
flv-util = { path= "../utils", version = "0.1.0", features= ["fixture"]}
async-test-derive = { path = "async-test-derive", version = "1.0.0" }
flv-future-aio = { path = "."}