[package]
edition = "2018"
name = "flv-future-core"
version = "0.2.0"
authors = ["fluvio.io"]
description = "future wrapper for fluvio projects"
repository = "https://github.com/infinyon/flv-future"
readme = "README.md"
license = "Apache-2.0"

[features]
default = ["asyncstd"]
asyncstd = ["async-std"]
fixture = ["async-test-derive"]

[dependencies]
log = "0.4.8"
async-std = { version = "1.4.0", features = ["default","unstable"], optional=true }
futures-timer = "2.0.2"
bytes = "0.5.3"
futures = { version = "0.3.1"}
pin-utils = "0.1.0-alpha.4"
async-test-derive = { path = "async-test-derive", version = "0.1.0", optional = true }


[dev-dependencies]
lazy_static = "1.2.0"
flv-util = { path= "../utils", features= ["fixture"]}
