[package]
name = "flv-util"
version = "0.2.0"
authors = ["Fluvio Contributors <team@fluvio.io>"]
description = "utilies for Fluvio projects"
repository = "https://github.com/infinyon/flv-future"
edition = "2018"
license = "Apache-2.0"

[features]
default = []
fixture = []

[dependencies]
env_logger = "0.7.1"
chrono =  "0.4.11"
log = "0.4.8"